# Pure-Pursuit

./: README.md  adaptive_lookahead_results.csv  package.xml  setup.cfg  setup.py
autodrive_test/: CMakeLists.txt  new_map_2_modified.csv  package.xml
autodrive_test/src/: alpp.cpp
config/: diffbot.rviz  diffbot_controllers.yaml
launch/: adaptive.launch.py  complete.launch.py  gz.launch.py  rviz.launch.py  trial.launch.py
pp_trial/: adaptive_implementation.py  adaptive_pp.py  pure_pursuit.py  pure_pursuit_using_controller.py
urdf/: diffbot.urdf  diffbot2.urdf  manual.urdf
