<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pp_trial</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aryan100306@gmail.com">aryan</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

<!-- <exec_depend>rclpy</exec_depend>
<exec_depend>controller_manager</exec_depend>
<exec_depend>ros2_control</exec_depend>
<exec_depend>diff_drive_controller</exec_depend>
<exec_depend>joint_state_broadcaster</exec_depend>
<exec_depend>robot_state_publisher</exec_depend>
<exec_depend>launch</exec_depend>
<exec_depend>launch_ros</exec_depend>
<exec_depend>gazebo_ros</exec_depend>
<exec_depend>gazebo_ros_pkgs</exec_depend>
<exec_depend>gazebo_dev</exec_depend>
<exec_depend>gazebo_msgs</exec_depend>
<exec_depend>gazebo_plugins</exec_depend>
<exec_depend>gazebo_ros_control</exec_depend>
<exec_depend>ros2_control_test_assets</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>


  <depend>joint_state_publisher</depend>
  <depend>rviz2</depend> -->
<exec_depend>rclpy</exec_depend>
<exec_depend>robot_state_publisher</exec_depend>
<exec_depend>launch</exec_depend>
<exec_depend>launch_ros</exec_depend>
<exec_depend>gazebo_ros</exec_depend>
<exec_depend>gazebo_ros_pkgs</exec_depend>
<exec_depend>gazebo_plugins</exec_depend>
<depend>geometry_msgs</depend>
<depend>nav_msgs</depend>
<depend>visualization_msgs</depend>
<depend>std_msgs</depend>
<depend>rviz2</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
